cmake_minimum_required (VERSION 2.8.3)
project(lsys)

if(APPLE)
    set(CMAKE_MACOSX_RPATH ON)
endif()

include(CheckCXXCompilerFlag)
include(CheckCXXSourceRuns)

if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  # Quench annoying deprecation warnings when compiling GLFW on OSX
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-deprecated-declarations")
endif()

if (CMAKE_CXX_COMPILER_ID MATCHES "^(GNU|Clang|Intel)$")
  CHECK_CXX_COMPILER_FLAG("-std=c++14" HAS_CPP14_FLAG)
  CHECK_CXX_COMPILER_FLAG("-std=c++11" HAS_CPP11_FLAG)

  if (HAS_CPP14_FLAG)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
  elseif (HAS_CPP11_FLAG)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
  else()
    message(FATAL_ERROR "Unsupported compiler -- pybind11 requires C++11 support!")
  endif()
endif()

if (APPLE)
  find_library(cocoa_library Cocoa)
  find_library(opengl_library OpenGL)
  find_library(corevideo_library CoreVideo)
  find_library(iokit_library IOKit)
  list(APPEND NANOGUI_EXTRA_LIBS ${cocoa_library} ${opengl_library} ${corevideo_library} ${iokit_library})
  list(APPEND LIBNANOGUI_EXTRA_SOURCE src/darwin.mm)
 endif()

# Disable building extras we won't need (pure C++ project)
set(NANOGUI_BUILD_EXAMPLE OFF CACHE BOOL " " FORCE)
set(NANOGUI_BUILD_PYTHON  OFF CACHE BOOL " " FORCE)
set(NANOGUI_INSTALL       OFF CACHE BOOL " " FORCE)
add_subdirectory(ext/nanogui)

# For reliability of parallel build, make the NanoGUI targets dependencies
set_property(TARGET glfw glfw_objects nanogui PROPERTY FOLDER "dependencies")

# Various preprocessor definitions have been generated by NanoGUI
add_definitions(${NANOGUI_EXTRA_DEFS})

# For debugging purposes
MESSAGE( STATUS "CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR} )

set(GLFW_INCLUDE_DIR
  ${CMAKE_CURRENT_SOURCE_DIR}/ext/nanogui/ext/glfw/include)
set(GLEW_INCLUDE_DIR
  ${CMAKE_CURRENT_SOURCE_DIR}/ext/nanogui/ext/glew/include)
set(NANOVG_INCLUDE_DIR
  ${CMAKE_CURRENT_SOURCE_DIR}/ext/nanogui/ext/nanovg/src)
set(NANOGUI_INCLUDE_DIR
  ${CMAKE_CURRENT_SOURCE_DIR}/ext/nanogui/include)
set(EIGEN_INCLUDE_DIR
  ${CMAKE_CURRENT_SOURCE_DIR}/ext/nanogui/ext/eigen)
set(IMGLIB_INCLUDE_DIR
  ${CMAKE_CURRENT_SOURCE_DIR}/ext/ImageEditLib/include)
set(STB_INCLUDE_DIR
  ${CMAKE_CURRENT_SOURCE_DIR}/ext/ImageEditLib/ext/)

# On top of adding the path to nanogui/include, you may need extras
include_directories(
    # include directory
    ${CMAKE_CURRENT_SOURCE_DIR}/include/

    # GLFW library for OpenGL context creation
    ${GLFW_INCLUDE_DIR}

    # GLEW library for accessing OpenGL functions
    ${GLEW_INCLUDE_DIR}

    # Linear algebra library
    ${EIGEN_INCLUDE_DIR}

    # NanoVG drawing library
    #${NANOVG_INCLUDE_DIR}

    # Nanogui include directory
    ${NANOGUI_INCLUDE_DIR}
    ${NANOGUI_EXTRA_INCS}

    # Image edit library
    ${IMGLIB_INCLUDE_DIR}
    ${STB_INCLUDE_DIR}

    ext
)

if(APPLE)
    set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -flto -Wno-unused-result -fno-strict-aliasing")
else()
    set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -flto -Wno-unused-result -fno-strict-aliasing -Wlto-type-mismatch")
endif()

add_executable(lsys
    # Some external libs
    # ext/ImageEditLib/include/imedit/image.h

    # Header files
    include/lsys/common.h
    include/lsys/util.h

    include/lsys/datastructures/pathdata.h
    include/lsys/datastructures/vector.h
    include/lsys/datastructures/rule.h
    include/lsys/datastructures/lsystem.h

    include/lsys/examples/exampleUI.h
    include/lsys/examples/koch_snowflake.h
    include/lsys/examples/sierpinski_carpet.h
    include/lsys/examples/sierpinski_triangle.h
    include/lsys/examples/uniform_mass_triangle.h
    include/lsys/examples/demo_one.h

    # Implementation files
    src/main.cpp

    src/datastructures/pathdata.cpp
    src/datastructures/rule.cpp
    src/datastructures/lsystem.cpp

    src/examples/exampleUI.cpp
    src/examples/koch_snowflake.cpp
    src/examples/sierpinski_carpet.cpp
    src/examples/sierpinski_triangle.cpp
    src/examples/uniform_mass_triangle.cpp
    src/examples/demo_one.cpp
)

# Lastly, additional libraries may have been built for you.  In addition to linking
# against NanoGUI, we need to link against those as well.
target_link_libraries(lsys nanogui ${NANOGUI_EXTRA_LIBS})

#target_link_libraries(lsys nanogui ${NANOGUI_EXTRA_LIBS})
